# Red-Pill-II

./: .gitignore  CAMPAIGN_PLAN.md  README.md  pyproject.toml  requirements.txt
booyah/: cli.py  config.py  run_full_pipeline.sh
booyah/analysis/: function_coverage_audit.py  read_lineage.py
booyah/analyze/: build_lineage_graph.py
booyah/appmap/: build_appmap.py  populate_admin.py  populate_customer.py  populate_deferred.py  populate_guest_remaining.py  populate_hops.py  populate_investigation.py  populate_l3.py  populate_mftf_gaps.py  populate_remaining_routes.py  schema.sql  taxonomy.md
booyah/assembler/: assemble.php
booyah/bubble/: __init__.py  schema.sql
booyah/codeql/: magento_sanitizers.ql  magento_sinks.ql  magento_sources.ql
booyah/correlate/: correlate.py  runtime_lineages.py
booyah/crawl/: crawl_admin.php  crawl_anon.php  crawl_cms.php  crawl_coverage.py  crawl_customer.php  crawl_gap_closure.php  crawl_review.php  crawl_reviews.php  direct_session.py  mftf_crawler.py  multi_order_crawl.py  package.json  playbook_runner.py  playwright_crawl.js  readback_probe.py  (+3 more)
docs/: ARCHITECTURE_PLAN.md  BUBBLE_ANALYSIS.md  CARTOGRAPHER.md  CURRENT_STATE.md  FAILURE_HANDLING.md  LINEAGE_MAP.md  ROUTE_COVERAGE.md  SCHEMA.md  TRACE_INGESTION_CHECKLIST.md
results/: appmap.db  booyah.db  correlated_findings.json  correlation.json  correlation_run2.json  joern_xss.json  playwright_reflected.json  psalm_taint.json  routes.json  run_manifest.json  semgrep_full.sarif  semgrep_review.sarif  snapshot_report.json  tool_failures.jsonl
tests/: test_new_layers.py
(+252 files in other folders)
