[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "booyah"
version = "0.1.0"
description = "Static analysis pipeline: map PHP apps and classify XSS data-flow protection"
requires-python = ">=3.9"
dependencies = [
    "tree-sitter==0.23.2",
    "tree-sitter-php==0.23.11",
    "sqlalchemy==2.0.49",
    "alembic==1.16.5",
    "networkx==3.2.1",
    "pydantic==2.12.0",
    "pydantic-settings==2.9.1",
    "pyyaml==6.0.3",
    "typer==0.9.4",
    "rich==15.0.0",
    "orjson==3.11.5",
    "tenacity==9.1.2",
    "click==8.1.8",
]

[project.scripts]
booyah = "booyah.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["booyah*"]

[tool.setuptools.package-data]
"booyah" = ["languages/**/*.yaml", "languages/**/*.json"]
